# fanpypro

./: .gitignore  .releaserc  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  hacs.json  info.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: release.yml
custom_components/fanpypro/: __init__.py  button.py  config_flow.py  const.py  fan.py  light.py  manifest.json  options_flow.py  select.py  strings.json
custom_components/fanpypro/codes/: README.md  gateway_salon_codes.yaml  gateway_template_codes.yaml
custom_components/fanpypro/translations/: ca.json  en.json  es.json
esphome/: README.md  gateway-cocina.yaml  gateway-pasillo.yaml  gateway-salon.yaml  secrets.yaml
scripts/: update_version.sh
